--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "nkowne63-wordle-solver-rs-01"
+license = "MIT"
 description = "wordle solver by the nkowne63"
 version = "0.1.0"
 edition = "2021"
