--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,17 +2,23 @@
 name = "nkowne63-wordle-solver-rs-01"
 license = "MIT"
 description = "wordle solver by the nkowne63"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-repl-rs = "0.2.6"
+repl-rs = { version = "0.2.6", optional = true }
 itertools = "0.10.3"
 once_cell = "1.9.0"
 
+[features]
+local = ["repl-rs"]
+
 [[bin]]
-# bin.name must be "wordle-solver"
+# for leko competition
 name = "wordle-solver"
-path = "src/main.rs"
+path = "src/binaries/leko.rs"
+
+[[bin]]
+name = "local-solver"
+path = "src/binaries/local.rs"
+required-features = ["local"]
